<resources>
    <string name="app_name">Tournamco</string>
    <string name="entryTitle">Participants</string>
    <string name="name_slot">Name</string>
    <string name="sample_name">Player A</string>
    <string name="round_header_name">Round 1</string>
    <string name="sample_score">1</string>
    <string name="sample_score_opponent">2</string>
    <string name="sample_game_title">Game 1</string>
    <string name="sample_team_name">us</string>
    <string name="sample_stage">Play-offs</string>
    <string name="title_Search">Discovery</string>
    <string name="title_Tournament">Tournament</string>
    <string name="title_Schedule">Schedule</string>

    <string name="map_api_key" translatable="false">AIzaSyAkIgN4iPquFuwncUBo4sN7C8U-Hv6UbcU</string>


    <string-array name="stage_options">
        <item>Pools</item>
        <item>Single Elim</item>
        <item>Double Elim</item>
        <item>Swiss Elim</item>
    </string-array>
</resources>