<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="12dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        tools:ignore="MissingConstraints"
        >

        <TextView
            android:id="@+id/game_proof_team1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/sample_team_name"
            android:textSize="16sp"
            android:gravity="center"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/score1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/score"
                android:text="@string/sample_score"
                android:textSize="20sp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"
                android:inputType="number"
                />

            <EditText
                android:id="@+id/score2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/score_alt"
                android:text="@string/sample_score_opponent"
                android:textSize="20sp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"
                android:inputType="number"
                />

        </LinearLayout>

        <TextView
            android:id="@+id/game_proof_team2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/sample_team_name"
            android:textSize="16sp"
            android:gravity="center"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>